Testing and cleanup (#3)
* Move forms into Forms folder

* Creating and populate grouping and ClusterGrouping tables

* Rebuild grouping initialization so that it is more robust for databases that don't have all of the regional data

* Refactoring for better ability to add more queries

--- a/SRP.CustomReports.WPF/SRP.CustomReports.WPF.csproj
+++ b/SRP.CustomReports.WPF/SRP.CustomReports.WPF.csproj
@@ -66,20 +66,37 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="BuildReport.xaml.cs">
+    <Compile Include="Entities\ClusterGrouping.cs" />
+    <Compile Include="Entities\Grouping.cs" />
+    <Compile Include="Forms\BuildReport.xaml.cs">
       <DependentUpon>BuildReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Entities\Cluster.cs" />
     <Compile Include="Entities\YouthContinuum.cs" />
-    <Compile Include="FindPathToSrp.xaml.cs">
+    <Compile Include="Forms\FindPathToSrp.xaml.cs">
       <DependentUpon>FindPathToSrp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904020139282_Grouping.cs" />
+    <Compile Include="Migrations\201904020139282_Grouping.Designer.cs">
+      <DependentUpon>201904020139282_Grouping.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904040221416_YouthContinuum.cs" />
+    <Compile Include="Migrations\201904040221416_YouthContinuum.Designer.cs">
+      <DependentUpon>201904040221416_YouthContinuum.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Customization\CreateViewOperation.cs" />
+    <Compile Include="Migrations\Customization\CustomSqlServerMigrationSqlGenerator.cs" />
+    <Compile Include="Migrations\Customization\DropViewOperation.cs" />
+    <Compile Include="Migrations\InitializeGroupings.cs" />
+    <Compile Include="Migrations\Customization\MigrationExtensions.cs" />
+    <Compile Include="Migrations\Views\ResourceReader.cs" />
     <Compile Include="Queries\SrpContext.cs" />
-    <Page Include="BuildReport.xaml">
+    <Page Include="Forms\BuildReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Forms\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -87,11 +104,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Forms\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="FindPathToSrp.xaml">
+    <Page Include="Forms\FindPathToSrp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -110,6 +127,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Migrations\201904020139282_Grouping.resx">
+      <DependentUpon>201904020139282_Grouping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904040221416_YouthContinuum.resx">
+      <DependentUpon>201904040221416_YouthContinuum.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -124,8 +147,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Queries\YouthContinuum.sql" />
+    <EmbeddedResource Include="Migrations\Views\YouthContinuum.sql" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
